Closed Bug 612829 Opened 15 years ago Closed 15 years ago

fix JS_DUMP_CONSERVATIVE_GC_ROOTS

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gwagner, Assigned: gwagner)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

It doesn't work right now because of thingKind, traceKind mixup and issues with not aligned GCThings.
Attached patch patch (obsolete) — Splinter Review
Assignee: general → anygregor
Attached patch patchSplinter Review
Attachment #491124 - Attachment is obsolete: true
Attachment #491127 - Flags: review?(igor)
Attachment #491127 - Flags: review?(igor) → review+
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: