Bug 612829 - fix JS_DUMP_CONSERVATIVE_GC_ROOTS, r=igor