js/src/jsgcstats.cpp
@@ -72,6 +72,7 @@ ConservativeGCStats::dump(FILE *fp)
     fprintf(fp, "        excluded, wrong tag: %lu\n", ULSTAT(counter[CGCT_WRONGTAG]));
     fprintf(fp, "         excluded, not live: %lu\n", ULSTAT(counter[CGCT_NOTLIVE]));
     fprintf(fp, "            valid GC things: %lu\n", ULSTAT(counter[CGCT_VALID]));
+    fprintf(fp, "      valid but not aligned: %lu\n", ULSTAT(counter[CGCT_VALIDWITHOFFSET]));
 #undef ULSTAT
 }
 #endif
@@ -134,6 +135,43 @@ GetSizeAndThings(size_t &thingSize, size_t &thingsPerArena)
     thingSize = sizeof(T);
     thingsPerArena = Arena<T>::ThingsPerArena;
 }
+
+#if defined JS_DUMP_CONSERVATIVE_GC_ROOTS
+void *
+GetAlignedThing(void *thing, int thingKind)
+{
+    Cell *cell = (Cell *)thing;
+    switch (thingKind) {
+        case FINALIZE_OBJECT0:
+            return (void *)GetArena<JSObject>(cell)->getAlignedThing(thing);
+        case FINALIZE_OBJECT2:
+            return (void *)GetArena<JSObject_Slots2>(cell)->getAlignedThing(thing);
+        case FINALIZE_OBJECT4:
+            return (void *)GetArena<JSObject_Slots4>(cell)->getAlignedThing(thing);
+        case FINALIZE_OBJECT8:
+            return (void *)GetArena<JSObject_Slots8>(cell)->getAlignedThing(thing);
+        case FINALIZE_OBJECT12:
+            return (void *)GetArena<JSObject_Slots12>(cell)->getAlignedThing(thing);
+        case FINALIZE_OBJECT16:
+            return (void *)GetArena<JSObject_Slots16>(cell)->getAlignedThing(thing);
+        case FINALIZE_STRING:
+            return (void *)GetArena<JSString>(cell)->getAlignedThing(thing);
+        case FINALIZE_EXTERNAL_STRING:
+            return (void *)GetArena<JSExternalString>(cell)->getAlignedThing(thing);
+        case FINALIZE_SHORT_STRING:
+            return (void *)GetArena<JSShortString>(cell)->getAlignedThing(thing);
+        case FINALIZE_FUNCTION:
+            return (void *)GetArena<JSFunction>(cell)->getAlignedThing(thing);
+#if JS_HAS_XML_SUPPORT
+        case FINALIZE_XML:
+            return (void *)GetArena<JSXML>(cell)->getAlignedThing(thing);
+#endif
+        default:
+            JS_ASSERT(false);
+            return NULL;
+    }
+}
+#endif
 
 void GetSizeAndThingsPerArena(int thingKind, size_t &thingSize, size_t &thingsPerArena)
 {
@@ -313,7 +351,7 @@ GCMarker::dumpConservativeRoots()
          i != conservativeRoots.end();
          ++i) {
         fprintf(fp, "  %p: ", i->thing);
-        switch (i->traceKind) {
+        switch (GetFinalizableTraceKind(i->thingKind)) {
           default:
             JS_NOT_REACHED("Unknown trace kind");
 
